# aoc

./: .gitignore  .prettierignore  LICENSE  README.md  aoc.cabal  aoc22.cabal  gleam.toml  manifest.toml  package-lock.json  package.json  tsconfig.json
010/: main.hs
03/: index.ts
04/: index.ts
05/: index.ts
06/: index.ts
07/: index.ts
08/: index.ts
09/: index.ts
2022/01/: main.ts
2022/02/: index.ts
2022/03/: index.ts
2022/04/: index.ts
2022/05/: index.ts  input.txt
2022/06/: index.ts
2022/07/: index.ts
2022/08/: index.ts
2022/09/: index.ts
2023/01/: index.ts
2023/02/: main.hs  test.txt
2023/03/: main.hs
2023/04/: main.hs
2024/: 2024_day17_2.ipynb
input/2023/: 10.example.txt  10.example_small.txt  7.example.txt  7.txt  8.txt
input/2024/: 13.example.txt  7.example.txt
src/: aoc.gleam  dijkstra.gleam  grid.gleam  matrix.gleam  memo.gleam  memores.gleam  nx.gleam  nx_ffi.ex  tuple.gleam  vector.gleam
src/aoc_2023/: day_10.gleam  day_11.gleam  day_12.gleam  day_13.gleam  day_14.gleam  day_15.gleam  day_16.gleam  day_17.gleam  day_5.gleam  day_6.gleam  day_7.gleam  day_7_2.gleam  day_8.gleam  day_9.gleam
src/aoc_2024/: 24_sorted.dot  24_sorted.txt  day_1.gleam  day_10.gleam  day_11.gleam  day_12.gleam  day_13.gleam  day_14.gleam  day_15.gleam  day_16.gleam  day_17.gleam  day_18.gleam  day_19.gleam  day_2.gleam  day_20.gleam  day_21.gleam  day_22.gleam  day_23.gleam  day_24.gleam  day_25.gleam  day_3.gleam  day_4.gleam  day_5.gleam  day_6.gleam  day_7.gleam  (+3 more)
types/: ReadonlyArray.ts  Vector.ts
utils/: curlInput.mjs
(+1 files in other folders)
