cabal-version:      2.4
name:               aoc22
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Julian Kalema Lukwata
maintainer:         julianlukwata@posteo.de

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable aoc22-10
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , split
        , containers
        , base ^>=4.16.4.0
    hs-source-dirs:   10
    default-language: Haskell2010
